add and delete from database.

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -8,30 +8,22 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- FirstFuel Header Assets -->
-        <meta property="og:image" content="http://www.firstfuel.com/firstfuel_facebook-180x180.png">
-        <meta name="twitter:image" content="http://www.firstfuel.com/firstfuel_twitter-400x400-displays200x200.png">
-        <link rel="shortcut icon" sizes="16x16 32x32 64x64" href="http://www.firstfuel.com/favicon.ico">
-        <link rel="apple-touch-icon" href="http://www.firstfuel.com/apple-touch-icon.png">
-        <link rel="apple-touch-icon-precomposed" href="http://www.firstfuel.com/apple-touch-icon-precomposed.png">
-        <link rel="icon" sizes="192x192" href="http://www.firstfuel.com/android-chrome-192x192.png">
-
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" type="text/css" href="https://getbootstrap.com/dist/css/bootstrap.css">
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
                 crossorigin="anonymous"></script>
 
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" type="text/css" href="https://getbootstrap.com/dist/css/bootstrap.css">
 
         <!-- HighCharts -->
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/modules/exporting.js"></script>
 
-        <title>{% block title %}{% endblock %} | fusion-purple</title>
+        <title>{% block title %}{% endblock %} | gradr</title>
     {% endblock %}
 </head>
 <body>
