--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -2,28 +2,33 @@
 {% block head %}
     {{ super() }}
 {% endblock %}
-{% block title %}Template{% endblock %}
+{% block title %}Gradr{% endblock %}
 
 {% block content %}
-<body>
+    <body>
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>     
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
 
-                <a class="navbar-brand" href="/home">fusion-purple</a>
+                <a class="navbar-brand" href="/home"> Gradr</a>
             </div>
-                                                
+
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="main-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/home">Home <span class="sr-only">(current)</span>
-                        </a></li>
+                    <li class="active">
+                        <a href="/home">Home <span class="sr-only">(current)</span> </a>
+                    </li>
+                    <li>
+                        <a href="/view_database">View Database</a>
+                    </li>
                     <li>
                         <a href="/about">About</a>
                     </li>
@@ -31,72 +36,67 @@
             </div>
         </div>
     </nav>
-    
+
+    {#    <center>#}
+    {#    <div class="fb-login-button" data-max-rows="1" data-size="xlarge" data-show-faces="false" data-auto-logout-link="true"></div>#}
+    {#    </center>#}
+
     <form method="POST" action="/submit">
-    <div class="container">
-        <div class="form-group">
-            {% with messages = get_flashed_messages() %}
-              {% if messages %}
-                <ul class=flashes>
-                {% for message in messages %}
-                  <li>{{ message }}</li>
-                {% endfor %}
-                </ul>
-              {% endif %}
-            {% endwith %}
-        </div>
-        <div class="form-group">
+        <div class="container">
+            <div class="form-group">
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        <ul class=flashes>
+                            {% for message in messages %}
+                                <li list-group-item-success>{{ message }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                {% endwith %}
+            </div>
+            <div class="form-group">
                 <div class="input-group col-md-4 col-md-offset-4">
-                    <label for="primary_activity">Primary Activity</label>
+                    <label for="assignment_type">Assignment Type</label>
                 </div>
                 <div class="input-group col-md-4 col-md-offset-4">
-                    <input type="text" name="primary_activity" id="primary_activity" class="form-control" placeholder="primary_activity" aria-label="primary_activity">
+                    <select class="form-control" id="assignment_type" name="assignment_type" required>
+                        <option class="placeholder" selected value="">Select type</option>
+                        <option value="homework">Homework</option>
+                        <option value="quiz">Quiz</option>
+                        <option value="exam">Exam</option>
+                    </select>
                 </div>
-        </div>
-        <div class="form-group">
+            </div>
+            <div class="form-group">
                 <div class="input-group col-md-4 col-md-offset-4">
-                    <label for="location">Location (Zip-code)</label>
-                </div>
-                <div class="input-group col-md-4 col-md-offset-4">
-                    <input type="number" name="location" id="location" class="form-control" placeholder="19087" aria-label="location" min="00000" max="99999">
-                    <span class="input-group-addon">US only</span>
-                </div>
-        </div>
-        <div class="form-group">
-                <div class="input-group col-md-4 col-md-offset-4">
-                    <label for="building_area">Building Area</label>
+                    <label for="assignment_weight">Weight</label>
                 </div>
                 <div class="input-group col-md-4 col-md-offset-4">
-                    <input type="number" name="building_area" id="building_area" class="form-control" placeholder="10,000" aria-label="building_area">
-                    <span class="input-group-addon">sq ft</span>
-                    
+                    <input type="number" step="any" name="assignment_weight" id="assignment_weight" class="form-control"
+                           placeholder="25" aria-label="assignment_weight" min="0" max="100" required>
+                    <span class="input-group-addon">%</span>
                 </div>
-        </div>
-       <div class="form-group">
-                <div class="input-group col-md-4 col-md-offset-4">
-                    <label for="energy_rate">Energy Rate</label>
-                </div>
-                <div class="input-group col-md-4 col-md-offset-4">
-                    <div class="input-group-addon">$</div>
-                    <input type="number" name="energy_rate" id="energy_rate" class="form-control" placeholder="0.12" aria-label="energy_rate" min=0>
-                    <span class="input-group-addon">per kWh</span>
-                </div>
-        </div>
-        <div class="form-group">
+            </div>
+            <div class="form-group">
                 <div class="input-group col-md-4 col-md-offset-4">
                     <input class="btn btn-success" type="submit" value="Submit">
                 </div>
             </div>
         </div>
+    </form>
 
-        </form>
-        
-        <div class="container">
-            <div id="nukes" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-        </div>
-    
+    {#    <div class="container">#}
+    {#        <div id="nukes" style="min-width: 310px; height: 400px; margin: 0 auto"></div>#}
+    {#    </div>#}
+    {##}
+    {#    <div class="container">#}
+    {#        <div id="cool" style="min-width: 400px; height: 310px; margin: 0 auto"></div>#}
+    {#    </div>#}
+
+
     <!-- Charts -->
-    <script src="{{ url_for('static', filename='charts/nukes.js') }}"></script>
-  
+    {#    <script src="{{ url_for('static', filename='charts/nukes.js') }}"></script>#}
+    {#    <script src="{{ url_for('static', filename='charts/cool.js') }}"></script>#}
+
     </body>
 {% endblock %}
