--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -67,9 +67,14 @@
                     </select>
                 </div>
             </div>
-            <div class="form-group">
+            <div class="form-inline">
                 <div class="input-group col-md-4 col-md-offset-4">
                     <label for="assignment_weight">Weight</label>
+                </div>
+                <div class="input-group col-md-4 col-md-offset-4">
+                    {% if originalWeight %}
+                        <span class="label label-info">Remaining: {{ (100 - originalWeight) }}%</span>
+                    {% endif %}
                 </div>
                 <div class="input-group col-md-4 col-md-offset-4">
                     <input type="number" step="any" name="assignment_weight" id="assignment_weight" class="form-control"
