--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -68,7 +68,7 @@
                     <label for="assignment_weight">Weight</label>
                 </div>
                 <div class="input-group col-md-4 col-md-offset-4">
-                        <span class="label label-info">Remaining: {{ (100 - originalWeight) }}%</span>
+                    <span class="label label-info">Remaining: {{ (100 - updatedWeight) }}%</span>
                 </div>
                 <div class="input-group col-md-4 col-md-offset-4">
                     <input type="number" step="any" name="assignment_weight" id="assignment_weight" class="form-control"
