--- a/application/templates/view_database.html
+++ b/application/templates/view_database.html
@@ -121,4 +121,14 @@
         </form>
     </div>
 
+    <div class="container">
+        </br>
+    </div>
+
+    <div class="container">
+        <form method="POST" action="/view_raw">
+            <input class="btn btn-success" type="submit" value="Show Raw Data">
+        </form>
+    </div>
+
 {% endblock %}
