--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                 </button>
 
-                <a class="navbar-brand" href="/home"> Gradr</a>
+                <a class="navbar-brand" href="/"> Gradr</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
