--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -39,7 +39,7 @@
 
     {% with messages = get_flashed_messages() %}
         {% if messages %}
-            <div class="alert alert-info alert-dismissable align-center">
+            <div class="alert alert-info align-center">
                 <div class="col-md-4">
                     <ul class=flashes>
                         {% for message in messages %}
