added janky weighted average. the WA is only displayed if all categories are being tracked, otherwise its all fucked up. ask me to explain this.

--- a/application/templates/stats.html
+++ b/application/templates/stats.html
@@ -54,6 +54,16 @@
                 <p><strong>Exam Mean: </strong>{{ exam_avg }}%</p>
             {% endif %}
 
+            {% if homework_avg %}
+                {% if quiz_avg %}
+                    {% if exam_avg %}
+                        <p class="lead"><strong>Weighted Average: </strong>{{ weighted_avg }}%</p>
+                    {% endif %}
+                {% endif %}
+            {% endif %}
+            <p>
+                <small> *weighted average only calculated if all assignment categories are being tracked*</small>
+            </p>
         </div>
     </div>
 
