--- a/application/templates/stats.html
+++ b/application/templates/stats.html
@@ -79,7 +79,7 @@
     </div>
 
     <!-- Charts -->
-    <script src="{{ url_for('static', filename='charts/peer-comparison.js') }}"></script>
+    <script src="{{ url_for('static', filename='charts/peer-comparison.js') }}" var_weighted_average={{ weighted_avg }}></script>
     {#    <script src="{{ url_for('static', filename='charts/cool.js') }}"></script>#}
 
 
